force-app/main/default/objects/Recommendation_Item_Care_Type__c/Recommendation_Item_Care_Type__c.object-meta.xml
<CustomObject>
    <label>Recommendation Item Care Type</label>
    <nameField>
        <displayFormat>RCT-{0000000}</displayFormat>
        <label>Recommendation Item Care Type</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recommendation Item Care Type</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>