force-app/main/default/objects/Recommendation_Item_Care_Type__c/fields/Care_Type__c.field-meta.xml
<CustomField>
    <fullName>Care_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Type</label>
    <referenceTo>Care_Type__c</referenceTo>
    <relationshipLabel>Recommendation Item Care Type</relationshipLabel>
    <relationshipName>Recommendation_Item_Care_Type</relationshipName>
    <type>Lookup</type>
</CustomField>