force-app/main/default/objects/Recommendation_Item_Care_Type__c/fields/Confirm__c.field-meta.xml
<CustomField>
    <fullName>Confirm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm</label>
    <type>Checkbox</type>
</CustomField>