force-app/main/default/objects/Recommendation_Item_Care_Type__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Approve (with dependencies)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>