force-app/main/default/objects/Recommendation_Item_Care_Type__c/fields/Decision_Type__c.field-meta.xml
<CustomField>
    <fullName>Decision_Type__c</fullName>
    <label>Decision Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requires further assessment (feedback below)</fullName>
            </value>
            <value>
                <fullName>Record Decision</fullName>
            </value>
            <value>
                <fullName>Send Back To Assessor</fullName>
            </value>
            <value>
                <fullName>Approve Recommendation</fullName>
            </value>
            <value>
                <fullName>Affirm</fullName>
            </value>
            <value>
                <fullName>Vary</fullName>
            </value>
            <value>
                <fullName>Set aside decision and substitute a new decision</fullName>
            </value>
            <value>
                <fullName>Set aside and remit the decision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>