force-app/main/default/objects/Recommendation_Item_Care_Type__c/fields/Declaration_of_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Declaration_of_Compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Declaration of Compliance</label>
    <type>Checkbox</type>
</CustomField>