force-app/main/default/objects/Recommendation_Item_Care_Type__c/fields/Dependencies__c.field-meta.xml
<CustomField>
    <fullName>Dependencies__c</fullName>
    <label>Dependencies</label>
    <type>TextArea</type>
</CustomField>