force-app/main/default/objects/Recommendation_Item_Care_Type__c/fields/Recommendation_Item__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recommendation Item</label>
    <referenceTo>Recommendation_Item__c</referenceTo>
    <relationshipLabel>Recommendation Item Care Type</relationshipLabel>
    <relationshipName>Recommendation_Item_Care_Type</relationshipName>
    <type>Lookup</type>
</CustomField>