force-app/main/default/objects/Recommendation_Item_Care_Type__c/validationRules/RCY_01_Decision.validationRule-meta.xml
<ValidationRule>
    <fullName>RCY_01_Decision</fullName>
    <active>false</active>
    <errorConditionFormula>AND(TEXT(Decision_Type__c)=&quot;Set aside the decision and substitute a new decision&quot;||TEXT(Decision_Type__c)=&quot;Vary&quot;,ISBLANK(TEXT(Decision__c)))</errorConditionFormula>
    <errorDisplayField>Decision__c</errorDisplayField>
    <errorMessage>Decision is mandatory.</errorMessage>
</ValidationRule>